# pagescan

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: colab_benchmark.py  run_smartdoc.py
benchmark/comparison/: README.md  run_comparison.py
benchmark/comparison/test_documents/: 01_letter.tex  02_postcard.tex  03_bank_statement.tex  04_kassenbon.tex  05_invoice_with_receipt.tex
src/pagescan/: __init__.py  __main__.py  cli.py  config.py  corners.py  edges.py  enhance.py  model.py  orientation.py  output.py  pipeline.py  quality.py  transform.py
tests/: test_corners.py  test_enhance.py  test_pipeline.py  test_transform.py
